<resources>
    <string name="app_name">Event Quiz App</string>
    <string name="welcome_to_my_app">welcome to My Event app</string>
    <string name="imageview">image</string>
    <string name="image">image splash</string>
    <string name="hi_welcome_to_my_app">Welcome to Event App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_family_name">Family Name</string>
    <string name="register_date_of_birth_yyyy_mm_dd">Date of Birth (YYYY-MM-DD)</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_btn">Register</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="celebrate_with_us">Celebrate With Us!t</string>
    <string name="register_heading">Register</string>
    <string name="welcome_title">Welcome to the Event Quiz App!</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_rules">View Rules</string>
    <string name="question">Question</string>
    <string name="radio_option_1">Option 1</string>
    <string name="radio_option_2">Option 2</string>
    <string name="radio_option_3">Option 3</string>
    <string name="checkbox_option_1">Option 1</string>
    <string name="checkbox_option_2">Option 2</string>
    <string name="checkbox_option_3">Option 3</string>
    <string name="confirm">Confirm</string>
    <string name="quiz_rules">Quiz Rules</string>
    <string name="rule1_description">1. Rule 1: Answers submitted must be final and cannot be changed after submission.</string>
    <string name="rule2_description">2. Rule 2: Participants must adhere to the designated time limit for each question.</string>
    <string name="rule3_description">3. Rule 3: Participants must answer all five questions.</string>
    <string name="rule4_description">4. Rule 4: One question with an answer of format multiple answers.</string>
    <string name="rule5_description">5. Rule 5: One question with an answer of format multiple choices.</string>
    <string name="btn_history">History</string>
    <string name="timer">timer</string>
</resources>