<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/start_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game"
        android:layout_below="@id/welcome_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="startGame"/>

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rules"
        android:layout_below="@id/start_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="showRules"/>

    <Button
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_history"
        android:layout_below="@id/rules_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="showHistory"/>


</RelativeLayout>
